Pagination with Page Neighbours is working- Added loading

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="http://www.myiconfinder.com/uploads/iconsets/64-64-e327f1aec173bf90e7f92b23192c8d6c-popcorn.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
