--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="http://www.myiconfinder.com/uploads/iconsets/64-64-e327f1aec173bf90e7f92b23192c8d6c-popcorn.png"/>
+    <link 
+      rel="icon" href="http://www.myiconfinder.com/uploads/iconsets/64-64-e327f1aec173bf90e7f92b23192c8d6c-popcorn.png"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +15,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
-rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384- ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+      rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384- ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" 
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,9 +31,9 @@ rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/boots
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Movie Databse</title>
+    <title>Master Movies Databse</title>
   </head>
-  <body>
+  <body style="background-image: url(https://thumbs.gfycat.com/UnrulyMediumFinwhale-max-1mb.gif);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
